--- a/docroot/modules/custom/ymca_retention/templates/layouts/ymca-retention.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/layouts/ymca-retention.html.twig
@@ -7,7 +7,9 @@
 <div class="retention-campaign{% if settings.extra_classes is not empty %} {{ settings.extra_classes }}{% endif %}"
      data-ng-app="Retention"
      data-ng-controller="RetentionController as retentionC">
+  <header class="compain-header">
     {{ content.header }}
+  </header>
 
   {{ content.main }}
   <div class="tab-content">
