Update styling for alerts

--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -2014,14 +2014,12 @@ body {
 
 .site-alert {
   font-family: "Cachet W01 Book", 'Ubuntu Condensed', sans-serif;
-  background-color: #00aeef;
   width: 100%;
 }
 .site-alert__wrapper {
   position: relative;
 }
 .site-alert__title {
-  color: #fff;
   font-size: 18px;
 }
 .site-alert__content p {
@@ -2040,15 +2038,17 @@ body {
     margin: 0;
   }
 }
-.site-alert__cta .btn-outline-inverse {
+.site-alert__cta .field-alert-link a {
   border: 1px solid #fff;
   color: #fff;
-  display: block;
+  display: inline-block;
   padding: 12px 16px;
+  text-align: center;
 }
-.site-alert__cta .btn-outline-inverse:hover {
+.site-alert__cta .field-alert-link a:hover {
   background-color: #fff;
   color: #0060af;
+  text-decoration: none;
 }
 .site-alert__dismiss {
   color: #fff;
@@ -2057,24 +2057,24 @@ body {
   top: 10px;
   text-shadow: 0 0 2px #4f4f4f;
 }
-.site-alert--header {
+.site-alert--header, .site-alert--footer {
   border: 1px solid #636466;
 }
-.site-alert--header .site-alert__wrapper {
+.site-alert--header .site-alert__wrapper, .site-alert--footer .site-alert__wrapper {
   padding: 10px 35px 11px 59px;
 }
-.site-alert--header .site-alert__title {
+.site-alert--header .site-alert__title, .site-alert--footer .site-alert__title {
   display: inline;
   padding-right: 0.7em;
 }
-.site-alert--header .site-alert__icon {
+.site-alert--header .site-alert__icon, .site-alert--footer .site-alert__icon {
   font-size: 26px;
   color: #ed1c24;
   position: absolute;
   top: 10px;
   left: 25px;
 }
-.site-alert--header .site-alert__icon:before {
+.site-alert--header .site-alert__icon:before, .site-alert--footer .site-alert__icon:before {
   content: " ";
   background-color: #fff;
   border-radius: 10px;
@@ -2085,141 +2085,63 @@ body {
   width: 20px;
   z-index: 2;
 }
-.site-alert--header .site-alert__icon .fa {
+.site-alert--header .site-alert__icon .fa, .site-alert--footer .site-alert__icon .fa {
   position: absolute;
   z-index: 3;
 }
-.site-alert--header .site-alert__content {
-  color: #231f20;
+.site-alert--header .site-alert__content, .site-alert--footer .site-alert__content {
   display: inline;
   font-size: 16px;
 }
-.site-alert--header .site-alert__content .field-body-no-summary a {
+.site-alert--header .site-alert__content .field-body-no-summary a, .site-alert--footer .site-alert__content .field-body-no-summary a {
   color: #fff;
 }
 @media (min-width: 0) and (max-width: 62em) {
-  .site-alert--header .site-alert__content * {
+  .site-alert--header .site-alert__content *, .site-alert--footer .site-alert__content * {
     display: inline;
   }
 }
-.site-alert--header .site-alert__cta a {
+.site-alert--header .site-alert__cta a, .site-alert--footer .site-alert__cta a {
   color: #fff;
-}
-.site-alert--header--yellow {
-  background: #fcaf17;
-  border: 1px solid #555555;
-}
-.site-alert--header--dark_blue {
-  background: #0060af;
-  border: 1px solid #555555;
-}
-.site-alert--header--dark_blue {
-  background-color: #0060af;
-}
-.site-alert--header--transparent {
-  background: none;
-  border: 1px solid #000;
-}
-.site-alert--header--transparent .site-alert__title {
-  color: #636466;
-}
-.site-alert--header--transparent .site-alert__content {
-  color: #636466;
-}
-.site-alert--header--transparent .site-alert__cta .btn-outline-inverse:hover {
-  color: #0089d0;
-}
-.site-alert--header--transparent .site-alert__cta a {
-  color: #0089d0;
-}
-.site-alert--footer {
-  background-color: #0060af;
-}
-.site-alert--footer .site-alert__wrapper {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-@media (min-width: 62em) {
-  .site-alert--footer .site-alert__wrapper {
-    padding-top: 25px;
-    padding-bottom: 25px;
-  }
-}
-.site-alert--footer .site-alert__title {
-  display: block;
-  font-size: 24px;
-  line-height: 28px;
-  padding-right: 1em;
-}
-@media (min-width: 48em) {
-  .site-alert--footer .site-alert__title {
-    margin-top: 14px;
-  }
-}
-@media (min-width: 62em) {
-  .site-alert--footer .site-alert__title {
-    display: inline-block;
-    font-size: 28px;
-    line-height: 50px;
-    margin-top: 0px;
-  }
-}
-.site-alert--footer .site-alert__content {
-  color: #fff;
-  display: block;
-  font-size: 18px;
-  line-height: 22px;
-}
-@media (min-width: 62em) {
-  .site-alert--footer .site-alert__content {
-    display: inline-block;
-    font-size: 20px;
-    line-height: 46px;
-  }
-}
-.site-alert--footer--yellow {
-  background: #fcaf17;
-  border: 1px solid #555555;
-}
-.site-alert--footer--yellow .site-alert__cta .btn-outline-inverse:hover {
-  color: #fcaf17;
-}
-.site-alert--footer--dark_blue {
-  background: #0060af;
-  border: 1px solid #555555;
-}
-.site-alert--footer--blue {
-  background-color: #0089d0;
-}
-.site-alert--footer--blue .site-alert__cta .btn-outline-inverse:hover {
-  color: #0089d0;
 }
 
-.header-alerts-list {
+.header-alerts-list,
+.footer-alerts-list {
   /* Arrows */
 }
-.header-alerts-list .slick-slider {
+.header-alerts-list .slick-slider,
+.footer-alerts-list .slick-slider {
   margin-bottom: 0;
 }
-.header-alerts-list .slick-track {
+.header-alerts-list .slick-track,
+.footer-alerts-list .slick-track {
   display: flex;
 }
-.header-alerts-list .slick-track .slick-slide {
+.header-alerts-list .slick-track .slick-slide,
+.footer-alerts-list .slick-track .slick-slide {
   display: flex;
   height: auto;
 }
-.header-alerts-list .slick__arrow {
+.header-alerts-list .slick__arrow,
+.footer-alerts-list .slick__arrow {
   display: none;
 }
 @media (min-width: 62em) {
-  .header-alerts-list .slick__arrow {
+  .header-alerts-list .slick__arrow,
+  .footer-alerts-list .slick__arrow {
     display: block;
     position: relative;
     margin-top: -25px;
   }
 }
+.header-alerts-list .slick__counter,
+.footer-alerts-list .slick__counter {
+  display: none;
+}
 .header-alerts-list .slick-prev,
-.header-alerts-list .slick-next {
+.header-alerts-list .slick-next,
+.footer-alerts-list .slick-prev,
+.footer-alerts-list .slick-next {
   position: absolute;
   display: block;
   height: 20px;
@@ -2239,22 +2161,34 @@ body {
 }
 .header-alerts-list .slick-prev:hover, .header-alerts-list .slick-prev:focus,
 .header-alerts-list .slick-next:hover,
-.header-alerts-list .slick-next:focus {
+.header-alerts-list .slick-next:focus,
+.footer-alerts-list .slick-prev:hover,
+.footer-alerts-list .slick-prev:focus,
+.footer-alerts-list .slick-next:hover,
+.footer-alerts-list .slick-next:focus {
   outline: none;
   background: transparent;
   color: transparent;
 }
 .header-alerts-list .slick-prev:hover:before, .header-alerts-list .slick-prev:focus:before,
 .header-alerts-list .slick-next:hover:before,
-.header-alerts-list .slick-next:focus:before {
+.header-alerts-list .slick-next:focus:before,
+.footer-alerts-list .slick-prev:hover:before,
+.footer-alerts-list .slick-prev:focus:before,
+.footer-alerts-list .slick-next:hover:before,
+.footer-alerts-list .slick-next:focus:before {
   opacity: 1;
 }
 .header-alerts-list .slick-prev.slick-disabled:before,
-.header-alerts-list .slick-next.slick-disabled:before {
+.header-alerts-list .slick-next.slick-disabled:before,
+.footer-alerts-list .slick-prev.slick-disabled:before,
+.footer-alerts-list .slick-next.slick-disabled:before {
   opacity: 0.25;
 }
 .header-alerts-list .slick-prev:before,
-.header-alerts-list .slick-next:before {
+.header-alerts-list .slick-next:before,
+.footer-alerts-list .slick-prev:before,
+.footer-alerts-list .slick-next:before {
   font-family: "FontAwesome";
   font-size: 20px;
   line-height: 1;
@@ -2263,141 +2197,27 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.header-alerts-list .slick-arrow {
+.header-alerts-list .slick-arrow,
+.footer-alerts-list .slick-arrow {
   text-shadow: 0 0 2px #000;
 }
-.header-alerts-list .slick-prev {
+.header-alerts-list .slick-prev,
+.footer-alerts-list .slick-prev {
   left: auto;
   right: 25px;
 }
-.header-alerts-list .slick-prev:before {
+.header-alerts-list .slick-prev:before,
+.footer-alerts-list .slick-prev:before {
   content: "\f104";
 }
-.header-alerts-list .slick-next {
+.header-alerts-list .slick-next,
+.footer-alerts-list .slick-next {
   left: auto;
   right: 0;
 }
-.header-alerts-list .slick-next:before {
+.header-alerts-list .slick-next:before,
+.footer-alerts-list .slick-next:before {
   content: "\f105";
-}
-.header-alerts-list .slick-dots {
-  bottom: auto;
-  display: block;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  text-align: center;
-  top: -6px;
-  width: 100%;
-}
-@media (min-width: 62em) {
-  .header-alerts-list .slick-dots {
-    display: none !important;
-  }
-}
-.header-alerts-list .slick-dots li {
-  position: relative;
-  display: inline-block;
-  height: 20px;
-  width: 20px;
-  margin: 0 5px;
-  padding: 0;
-  cursor: pointer;
-}
-.header-alerts-list .slick-dots li button {
-  border: 0;
-  background: transparent;
-  display: block;
-  height: 20px;
-  width: 20px;
-  outline: none;
-  line-height: 0px;
-  font-size: 0px;
-  color: transparent;
-  padding: 5px;
-  cursor: pointer;
-}
-.header-alerts-list .slick-dots li button:hover, .header-alerts-list .slick-dots li button:focus {
-  outline: none;
-}
-.header-alerts-list .slick-dots li button:hover:before, .header-alerts-list .slick-dots li button:focus:before {
-  opacity: 1;
-}
-.header-alerts-list .slick-dots li button:before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "\f111";
-  width: 20px;
-  height: 20px;
-  font-family: "FontAwesome";
-  font-size: 6px;
-  line-height: 20px;
-  text-align: center;
-  color: #fff;
-  opacity: 0.5;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-shadow: 0 0 2px #000;
-}
-.header-alerts-list .slick-dots li.slick-active button:before {
-  color: #fff;
-  opacity: 0.75;
-}
-.header-alerts-list .slick-dots li.slick-active button:hover:before {
-  opacity: 1;
-}
-
-.specific-alerts-list {
-  padding: 20px 0;
-  padding: 2rem 0;
-}
-.specific-alerts-list .container {
-  width: auto;
-}
-.specific-alerts-list .site-alert__cta {
-  line-height: 23px;
-  line-height: 2.3rem;
-  text-align: right;
-}
-@media (min-width: 48em) {
-  .specific-alerts-list .site-alert__cta {
-    padding-right: 20px;
-    padding-right: 2rem;
-  }
-}
-
-#schedules-search-form-wrapper .alerts-wrapper {
-  background-color: #fff;
-  margin-bottom: 30px;
-}
-#schedules-search-form-wrapper .alerts-wrapper .site-alert--header--yellow {
-  background-color: #fff;
-  border: 1px solid #fcaf17;
-}
-#schedules-search-form-wrapper .alerts-wrapper .site-alert--header--blue {
-  background-color: #fff;
-  border: 1px solid #0089d0;
-}
-#schedules-search-form-wrapper .alerts-wrapper .site-alert--header--dark_blue {
-  background-color: #fff;
-  border: 1px solid #0060af;
-}
-#schedules-search-form-wrapper .alerts-wrapper .site-alert__title {
-  color: #636466;
-}
-#schedules-search-form-wrapper .alerts-wrapper .site-alert__content {
-  color: #636466;
-}
-#schedules-search-form-wrapper .alerts-wrapper .site-alert__cta a {
-  color: #0089d0;
-  font-size: 14px;
-  font-size: 1.4rem;
-  text-transform: uppercase;
-}
-#schedules-search-form-wrapper .alerts-wrapper .site-alert__icon {
-  color: #f15922;
 }
 
 .program-header {
