--- a/themes/openy_themes/openy_rose/templates/node/node--alert--node-alert-footer.html.twig
+++ b/themes/openy_themes/openy_rose/templates/node/node--alert--node-alert-footer.html.twig
@@ -94,7 +94,7 @@
           {{ content.field_alert_description }}
         </div>
       </div>
-      <div class="site-alert__cta">
+      <div class="col-xs-12 col-sm-5 col-md-4 col-lg-3 site-alert__cta">
         {{ content.field_alert_link }}
       </div>
       <a href="#" class="site-alert__dismiss"><i class="fa fa-times"></i></a>
