--- a/docroot/modules/custom/ymca_retention/templates/modals/ymca-retention-register-confirmation-modal.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/modals/ymca-retention-register-confirmation-modal.html.twig
@@ -3,7 +3,7 @@
     <div class="col-sm-12">
       <p><strong> {{ 'Thanks for registering for the Y Recharge Challenge.'|t }}</strong></p>
       <p>{{ 'Check your email for additional details—you should receive an email confirmation on the next business day.'|t }}</p>
-      <p>{{ 'Add <b>mail@ymcamn.org</b> to your address book to ensure you receive all Y Spirit Challenge emails.'|t }}</p>
+      <p>{{ 'Add <b>mail@ymcamn.org</b> to your address book to ensure you receive all Y Recharge Challenge emails.'|t }}</p>
     </div>
   </div>
   <div class="row">
