--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-introduction.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-introduction.html.twig
@@ -27,7 +27,7 @@
             <h3>1. {{ 'Visit the Y'|t }}</h3>
             <p>
               {{ 'Once you\'re registered, come to the Y during the challenge.'|t }}
-              <a href="#tab_2">{{ 'Find your Y'|t }}</a>.
+              <a href="{{ path('ymca_frontend.locations') }}" target="_blank">{{ 'Find your Y'|t }}</a>.
             </p>
           </div>
           <figure class="img">
@@ -42,7 +42,7 @@
             <h3>2. {{ 'Track progress'|t }}</h3>
             <p>
               {{ 'Each visit is one step closer to meeting your goal &mdash; and getting 4 guest passes.'|t }}
-              <a href="#tab_3">{{ 'See your goal & progress'|t }}</a>.
+              <a href="#tab_3" class="campaign-not-started" data-toggle="modal" data-target="#ymca-retention-modal" data-type="tabs-lock">{{ 'See your goal & progress'|t }}</a>.
             </p>
           </div>
           <figure class="img">
@@ -57,7 +57,7 @@
             <h3>3. {{ 'Check out daily tips'|t }}</h3>
             <p>
               {{ 'Come back to the site daily, March 8-21 for inspiration to integrate wellness in your life. For each tip that you check out, you’ll be entered in a drawing for Y Bucks.'|t }}
-              <a href="#tab_4">{{ 'Find tips'|t }}</a>.
+              <a href="#tab_4" class="campaign-not-started" data-toggle="modal" data-target="#ymca-retention-modal" data-type="tabs-lock">{{ 'Find tips'|t }}</a>.
             </p>
           </div>
           <figure class="img">
