--- a/templates/node/node--blog--full.html.twig
+++ b/templates/node/node--blog--full.html.twig
@@ -80,9 +80,8 @@
     view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
   ]
 %}
-{%
-  set main_col_count = node.field_sidebar_content.getValue() is empty ? '12' : '8'
-%}
+{% set main_col_count = node.field_sidebar_content.getValue() is empty ? '12' : '8' %}
+{% set sidebar = node.field_sidebar_content.getValue() is empty ? false : true %}
 <article{{ attributes.addClass(classes) }}>
   <div{{ content_attributes.addClass('node__content') }}>
     {{ content.field_landing_header }}
@@ -94,7 +93,7 @@
         <div class="content-main-region col-sm-{{ main_col_count }}">
           {{ content|without('field_sidebar_content') }}
         </div>
-        {% if node.field_sidebar_content.getValue() is not empty %}
+        {% if sidebar %}
         <div class="content-sidebar-region col-sm-4">
           {{ content.field_sidebar_content }}
         </div>
