Making changes for the CTA link

--- a/themes/openy_themes/openy_rose/scss/modules/_alerts.scss
+++ b/themes/openy_themes/openy_rose/scss/modules/_alerts.scss
@@ -30,14 +30,13 @@ $module: 'site-alert';
     }
 
     .field-alert-link a {
-      border: 1px solid $white;
-      color: $white;
+      border: 1px solid;
       display: inline-block;
       padding: 12px 16px;
       text-align: center;
       &:hover {
         background-color: $white;
-        color: $dark-blue;
+        color: $dark-blue !important;
         text-decoration: none;
       }
     }
