--- a/themes/openy_themes/openy_rose/css/styles.css
+++ b/themes/openy_themes/openy_rose/css/styles.css
@@ -2039,15 +2039,14 @@ body {
   }
 }
 .site-alert__cta .field-alert-link a {
-  border: 1px solid #fff;
-  color: #fff;
+  border: 1px solid;
   display: inline-block;
   padding: 12px 16px;
   text-align: center;
 }
 .site-alert__cta .field-alert-link a:hover {
   background-color: #fff;
-  color: #0060af;
+  color: #0060af !important;
   text-decoration: none;
 }
 .site-alert__dismiss {
