--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-introduction.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-introduction.html.twig
@@ -43,7 +43,7 @@
             <p>
               {{ 'Each visit is one step closer to meeting your goal &mdash; and getting 4 guest passes.'|t }}
               <a style="display: none;" href="#tab_3" class="campaign-not-started"
-                 data-toggle="modal" data-target="#bonus-modal-day" data-type="tabs-lock">{{ 'See your goal & progress'|t }}</a>.
+                 data-toggle="modal" data-target="#bonus-modal-day" data-type="tabs-lock">{{ 'See your goal & progress'|t }}</a>
             </p>
           </div>
           <figure class="img">
@@ -59,7 +59,7 @@
             <p>
               {{ 'Come back to the site daily, March 8-21 for inspiration to integrate wellness in your life. For each tip that you check out, you’ll be entered in a drawing for Y Bucks.'|t }}
               <a style="display: none;" href="#tab_2" class="campaign-not-started"
-                 data-toggle="modal" data-target="#bonus-modal-day" data-type="tabs-lock">{{ 'Find tips'|t }}</a>.
+                 data-toggle="modal" data-target="#bonus-modal-day" data-type="tabs-lock">{{ 'Find tips'|t }}</a>
             </p>
           </div>
           <figure class="img">
