--- a/modules/locations.scss
+++ b/modules/locations.scss
@@ -133,10 +133,12 @@
     }
   }
   .marker_tooltip & {
-    border: 0 none;
-    padding: 0;
-    margin: 0;
+    background: $white;
+    border-bottom: none;
+    border-top: none;
     height: auto;
+    margin: 0;
+    min-height: 0;
   }
   h2 {
     font-size: 22px;
