--- a/prototypes/scss/modules/gmap.scss
+++ b/prototypes/scss/modules/gmap.scss
@@ -9,7 +9,8 @@
   display: none;
 }
 .gm-openy-pimp {
-  margin-top: -6px;
+  margin-top: -9px;
+  margin-left: -35px;
   > div {
     height: 30px !important;
     width: 30px !important;
