--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-intro.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-intro.html.twig
@@ -20,7 +20,7 @@
     <div class="content">
       <h2>{{ 'to be announced!'|t }}</h2>
       <p>{{ 'The drawing will take place at the end of the challenge.'|t }}<br>
-        {{ 'Come back March 22 to find out if you are a winner!'|t }}
+        {{ description }}
       </p>
       <h3>{{ 'good luck!'|t }}</h3>
     </div>
