--- a/openy_lily/templates/include/brand-link.html.twig
+++ b/openy_lily/templates/include/brand-link.html.twig
@@ -6,7 +6,7 @@
 #}
 
 <a href="{{ base }}" class="footer-brand brand">
-  {{ "YMCA Twin Cities"|t }}
+  {{ site_name }}
   <small>
     {{ "For Youth Development"|t }}
     <br/>
