--- a/themes/openy_themes/openy_rose/css/colors.css
+++ b/themes/openy_themes/openy_rose/css/colors.css
@@ -78,6 +78,10 @@ a,
 .footer {
   background-color: #4f4f4f;
 }
+.footer,
+.footer .footer__nav nav ul li a {
+  color: #fffffa;
+}
 
 /* Camp specific overrides */
 .is-camp {
