--- a/docroot/themes/custom/ymca/css/style.css
+++ b/docroot/themes/custom/ymca/css/style.css
@@ -8457,7 +8457,7 @@ body .ajax-progress-throbber .throbber {
   background-color: #9c1f7b;
 }
 
-.affix #block-top-menu-2 .navbar-default .navbar-nav > li:first-child > a {
+.affix .navbar-default #block-top-menu-2 .navbar-nav > li:first-child > a {
   margin-top: 10px;
 }
 
