--- a/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
+++ b/docroot/themes/custom/ymca/sass/global/_ymca-styles.scss
@@ -888,6 +888,6 @@ body .ajax-progress-throbber {
     background-color: #9c1f7b;
   }
 }
-.affix #block-top-menu-2 .navbar-default .navbar-nav > li:first-child > a {
+.affix .navbar-default #block-top-menu-2 .navbar-nav > li:first-child > a {
   margin-top: 10px;
 }
