--- a/prototypes/scss/modules/testimonials.scss
+++ b/prototypes/scss/modules/testimonials.scss
@@ -1,5 +1,7 @@
 .node-testimonial-form,
 .node-testimonial-edit-form {
+  margin: 20px 0;
+
   .field--type-language,
   .vertical-tabs,
   .filter-wrapper {
