--- a/docroot/modules/custom/yptf_kronos/templates/yptf-kronos-report.html.twig
+++ b/docroot/modules/custom/yptf_kronos/templates/yptf-kronos-report.html.twig
@@ -17,6 +17,7 @@
   .yptf-kr-table .yptf-kr-lp {background-color: #e7d7f3;}
   .yptf-kr-table .yptf-kr-second-header {font-size: 12px;}
   .kronos-messages .red {color: #ff0000;}
+  .kronos-legend {font-size: 14px;}
 </style>
 <table class="yptf-kr-table">
   <tr>
@@ -24,10 +25,10 @@
     <th colspan="4" class="yptf-kr-purple" bgcolor="#834cad"><strong>{{ "Personal Training Service Hours"|t }}</strong></th>
   </tr>
   <tr>
-    <td class="yptf-kr-lp yptf-kr-second-header" bgcolor="#e7d7f3">{{ "<strong>Workforce</strong> PT<br>Hours Submitted"|t }}</td>
-    <td class="yptf-kr-lp yptf-kr-second-header" bgcolor="#e7d7f3">{{ "<strong>MINDBODY<br>Reported PT<br>Booked Hours</strong>"|t }}</td>
-    <td class="yptf-kr-lp yptf-kr-second-header" bgcolor="#e7d7f3"><strong>{{ "Variance"|t }}</strong></td>
-    <td class="yptf-kr-lp yptf-kr-second-header" bgcolor="#e7d7f3">{{ "<strong>Historical Hours</strong><br>Corrected time<br>from past report"|t }}</td>
+    <td class="yptf-kr-lp yptf-kr-second-header" bgcolor="#e7d7f3"><strong>KWFC</strong></td>
+    <td class="yptf-kr-lp yptf-kr-second-header" bgcolor="#e7d7f3"><strong>MB</strong></td>
+    <td class="yptf-kr-lp yptf-kr-second-header" bgcolor="#e7d7f3"><strong>VR</strong></td>
+    <td class="yptf-kr-lp yptf-kr-second-header" bgcolor="#e7d7f3"><strong>HR</strong></td>
   </tr>
   {% for key, row in data.rows %}
     <tr>
@@ -46,6 +47,14 @@
     <td class="yptf-kr-lp" bgcolor="#e7d7f3"><strong>{{ data.summary.historical_hours }}</td>
   </tr>
 </table>
+<div class="kronos-legend">
+  <ul>
+    <li><strong>KWFC</strong> - {{ "Kronos Workforce Personal Training hours that were submitted."|t }}</li>
+    <li><strong>MB</strong> - {{ "MindBody Personal Training hours that were reported."|t }}</li>
+    <li><strong>VR</strong> - {{ "Variance between MindBody and Workforce hours."|t }}</li>
+    <li><strong>HR</strong> - {{ "Historical Hours(corrected time) from past report."|t }}</li>
+  </ul>
+</div>
 <div class="kronos-messages">
   {% if data.messages %}
     <p class="red">{{ "Warning: duplicate employee ID conflict in MINDBODY. Employee ID listed in MINDBODY matches the following users:"|t }}</p>
