--- a/modules/openy_features/openy_node/modules/openy_node_event/templates/event-contact-info.html.twig
+++ b/modules/openy_features/openy_node/modules/openy_node_event/templates/event-contact-info.html.twig
@@ -1,3 +1,19 @@
+{#
+/**
+ * @file
+ * Default theme implementation to display a event contact info.
+ *
+ * Available variables:
+ * - info: The info array with access to contact data.
+ *   - info.phone will return contact phone number.
+ *   - info.fax will return contact fax number.
+ *   - info.email will return contact email.
+ *
+ * @see openy_node_event_preprocess_field__node__field_event_location__event()
+ *
+ * @ingroup themeable
+ */
+#}
 <div class="info-col contact col-md-4">
   {% if info.phone is not empty %}
     <div class="contact-phone">{{ 'Tel:'|t }}<span>{{ info.phone }}</span></div>
