--- a/modules/openy_features/openy_node/modules/openy_node_event/templates/event-date-info.html.twig
+++ b/modules/openy_features/openy_node/modules/openy_node_event/templates/event-date-info.html.twig
@@ -1,3 +1,26 @@
+{#
+/**
+ * @file
+ * Default theme implementation to display a eventd info.
+ *
+ * Available variables:
+ * - info: The info array with access to event date info.
+ *   - info.date_start will return formated "j M g:i a" event start date.
+ *   - info.date_end will return formated "g:i a" event end date.
+ * - atc: The atc array of additional calendar info.
+ *   - atc_date_start will return formated "Y-m-d H:i:s" event start date.
+ *   - atc_date_end will return formated "Y-m-d H:i:s" event end date.
+ *   - atc_timezone will return drupal_get_user_timezone().
+ *   - atc_title will return node Title.
+ *   - atc_description will return node field description.
+ *   - atc_location will return location description.
+ *   - atc_organizer will return will return organizer description.
+ *
+ * @see openy_node_event_preprocess_field__node__field_event_location__event()
+ *
+ * @ingroup themeable
+ */
+#}
 <div class="info-col date col-md-4">
   <div class="date-start">{{ info.date_start }}</div>
   <div class="date-end">{{ 'Until'|t }} {{ info.date_end }}</div>
